udpate pipeline queries

--- a/database_components/mongoDB_local-to-public_conversion.ipynb
+++ b/database_components/mongoDB_local-to-public_conversion.ipynb
@@ -41,6 +41,9 @@
     "remote_collection_name = 'station_names'\n",
     "remote_collection = remote_db[remote_collection_name]\n",
     "\n",
+    "# Drop the remote collection to start fresh\n",
+    "remote_collection.drop()\n",
+    "\n",
     "# Iterate through documents in the local collection and insert into remote collection\n",
     "for document in local_collection.find():\n",
     "    remote_collection.insert_one(document)"
@@ -62,6 +65,9 @@
     "remote_db = remote_client['divvy_db_public']\n",
     "remote_collection_name = 'divvy_rides_by_month'\n",
     "remote_collection = remote_db[remote_collection_name]\n",
+    "\n",
+    "# Drop the remote collection to start fresh\n",
+    "remote_collection.drop()\n",
     "\n",
     "# Iterate through documents in the local collection and insert into remote collection\n",
     "for document in local_collection.find():\n",
@@ -85,6 +91,9 @@
     "remote_collection_name = 'divvy_rides_by_season'\n",
     "remote_collection = remote_db[remote_collection_name]\n",
     "\n",
+    "# Drop the remote collection to start fresh\n",
+    "remote_collection.drop()\n",
+    "\n",
     "# Iterate through documents in the local collection and insert into remote collection\n",
     "for document in local_collection.find():\n",
     "    remote_collection.insert_one(document)"
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +115,9 @@
     "remote_db = remote_client['divvy_db_public']\n",
     "remote_collection_name = 'divvy_rides_and_weather'\n",
     "remote_collection = remote_db[remote_collection_name]\n",
+    "\n",
+    "# Drop the remote collection to start fresh\n",
+    "remote_collection.drop()\n",
     "\n",
     "# Iterate through documents in the local collection and insert into remote collection\n",
     "for document in local_collection.find():\n",
