--- a/database_components/queries.ipynb
+++ b/database_components/queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     "    },\n",
     "    {\n",
     "        \"$project\": {\n",
-    "            \"_id\": 0,\n",
+    "            \"_id\": 0,  # Exclude the _id field\n",
     "            \"year\": \"$_id.year\",\n",
     "            \"month\": \"$_id.month\",\n",
     "            \"total_rides\": 1\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
     "divvy_rides_and_weather.drop()\n",
     "\n",
     "# Execute the aggregation pipeline and insert the results into the new collection\n",
-    "results = divvy_db.divvy_rides_by_day.aggregate(pipeline)\n",
+    "results = list(divvy_db.divvy_rides_by_day.aggregate(pipeline))\n",
     "\n",
     "# Insert each result document into the new collection\n",
     "for result in results:\n",
