--- a/database_components/queries.ipynb
+++ b/database_components/queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +39,7 @@
     "divvy_ride_data = divvy_db[\"divvy_ride_data\"]\n",
     "\n",
     "# Define the aggregation pipeline\n",
+    "# Define the aggregation pipeline\n",
     "pipeline = [\n",
     "    {\n",
     "        \"$group\": {\n",
@@ -51,9 +52,23 @@
     "    },\n",
     "    {\n",
     "        \"$project\": {\n",
-    "            \"_id\": 0,  # Exclude the _id field\n",
     "            \"year\": \"$_id.year\",\n",
     "            \"month\": \"$_id.month\",\n",
+    "            \"total_rides\": 1\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"_id\": {\n",
+    "                \"$toString\": {\n",
+    "                    \"$concat\": [\n",
+    "                        {\"$toString\": \"$year\"},\n",
+    "                        {\"$toString\": \"$month\"}\n",
+    "                    ]\n",
+    "                }\n",
+    "            },\n",
+    "            \"year\": 1,\n",
+    "            \"month\": 1,\n",
     "            \"total_rides\": 1\n",
     "        }\n",
     "    },\n",
@@ -75,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -143,6 +158,7 @@
    "source": [
     "divvy_ride_data = divvy_db[\"divvy_ride_data\"]\n",
     "\n",
+    "# Define the aggregation pipeline\n",
     "pipeline = [\n",
     "    {\n",
     "        \"$group\": {\n",
@@ -154,9 +170,17 @@
     "    },\n",
     "    {\n",
     "        \"$project\": {\n",
-    "            \"_id\": 0,  # Exclude the _id field\n",
     "            \"date\": \"$_id.date\",\n",
     "            \"total_rides\": 1  # Include the total_rides field\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"_id\": {\n",
+    "                \"$toString\": \"$date\"  # Convert the date to a string\n",
+    "            },\n",
+    "            \"date\": 1,\n",
+    "            \"total_rides\": 1\n",
     "        }\n",
     "    },\n",
     "    {\n",
@@ -179,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +232,7 @@
     "    },\n",
     "    {\n",
     "        \"$project\": {\n",
-    "            \"_id\": 0,  # Exclude the _id field\n",
-    "            \"date\": 1,\n",
+    "            \"date\": {\"$toString\": \"$date\"},  # Convert the date to a string\n",
     "            \"total_rides\": 1,\n",
     "            \"cloud_cover\": \"$weather.cloud_cover\",\n",
     "            \"precipitation\": \"$weather.precipitation\",\n",
