--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -54,25 +54,18 @@
       "{'_id': ObjectId('650f7a7291cca7bfdb2c89da'), 'ride_id': 'A6CF8980A652D272', 'rideable_type': 'electric_bike', 'started_at': '2022-01-10 08:41:56', 'ended_at': '2022-01-10 08:46:17', 'start_station_name': 'Glenwood Ave & Touhy Ave', 'start_station_id': 525, 'end_station_name': 'Clark St & Touhy Ave', 'end_station_id': 'RP-007', 'start_lat': 42.012763, 'start_lng': -87.6659675, 'end_lat': 42.01256011541, 'end_lng': -87.6743671152, 'member_casual': 'casual', 'started_at_date': '2022-01-10', 'started_at_time': '08:41:56', 'ended_at_date': '2022-01-10', 'ended_at_time': '08:46:17'}\n",
       "\n",
       "\n",
-      "Collection Name: divvy_rides_by_day\n",
-      "Document Count: 365\n",
-      "Field Names: _id, total_rides, date\n",
-      "Sample Document:\n",
-      "{'_id': ObjectId('6518d2400e234f86514c1b68'), 'total_rides': 2563, 'date': '2022-01-01'}\n",
-      "\n",
-      "\n",
       "Collection Name: divvy_rides_and_weather\n",
       "Document Count: 365\n",
       "Field Names: _id, total_rides, date, cloud_cover, precipitation, min_temp, max_temp, morning_temp, afternoon_temp, evening_temp, night_temp, max_windspeed, significant_precipitation\n",
       "Sample Document:\n",
-      "{'_id': ObjectId('6518d3480e234f86514c1cd5'), 'total_rides': 2563, 'date': '2022-01-01', 'cloud_cover': 90.0, 'precipitation': 0.0070866179999999, 'min_temp': 33.22, 'max_temp': 42.1, 'morning_temp': 42.1, 'afternoon_temp': 38.43, 'evening_temp': 35.24, 'night_temp': 38.44, 'max_windspeed': 15.01, 'significant_precipitation': 'False'}\n",
+      "{'_id': '2022-01-01', 'total_rides': 2563, 'date': '2022-01-01', 'cloud_cover': 90.0, 'precipitation': 0.0070866179999999, 'min_temp': 33.22, 'max_temp': 42.1, 'morning_temp': 42.1, 'afternoon_temp': 38.43, 'evening_temp': 35.24, 'night_temp': 38.44, 'max_windspeed': 15.01, 'significant_precipitation': 'False'}\n",
       "\n",
       "\n",
-      "Collection Name: divvy_rides_by_season\n",
-      "Document Count: 4\n",
-      "Field Names: _id, total_rides\n",
+      "Collection Name: divvy_rides_by_day\n",
+      "Document Count: 365\n",
+      "Field Names: _id, total_rides, date\n",
       "Sample Document:\n",
-      "{'_id': {'year': 2022, 'season': 'Autumn'}, 'total_rides': 1597759}\n",
+      "{'_id': '2022-01-01', 'total_rides': 2563, 'date': '2022-01-01'}\n",
       "\n",
       "\n",
       "Collection Name: station_names\n",
@@ -86,7 +79,7 @@
       "Document Count: 12\n",
       "Field Names: _id, total_rides, year, month\n",
       "Sample Document:\n",
-      "{'_id': ObjectId('6518ce3c66870a32ca9ce76d'), 'total_rides': 103770, 'year': 2022, 'month': 1}\n",
+      "{'_id': '20221', 'total_rides': 103770, 'year': 2022, 'month': 1}\n",
       "\n",
       "\n",
       "Collection Name: divvy_ride_data_sample\n",
@@ -101,6 +94,13 @@
       "Field Names: _id, date, cloud_cover, precipitation, min_temp, max_temp, morning_temp, afternoon_temp, evening_temp, night_temp, max_windspeed, significant_precipitation\n",
       "Sample Document:\n",
       "{'_id': ObjectId('65108c65d3f3ef7df018a61e'), 'date': '2022-01-05', 'cloud_cover': 64.0, 'precipitation': 0.009842525, 'min_temp': 13.57, 'max_temp': 33.39, 'morning_temp': 31.53, 'afternoon_temp': 32.74, 'evening_temp': 22.19, 'night_temp': 31.64, 'max_windspeed': 17.0, 'significant_precipitation': 'False'}\n",
+      "\n",
+      "\n",
+      "Collection Name: divvy_rides_by_season\n",
+      "Document Count: 4\n",
+      "Field Names: _id, total_rides\n",
+      "Sample Document:\n",
+      "{'_id': {'year': 2022, 'season': 'Autumn'}, 'total_rides': 1597759}\n",
       "\n",
       "\n"
      ]
@@ -144,18 +144,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Collection Name: divvy_rides_by_month\n",
+      "Document Count: 12\n",
+      "Field Names: _id, total_rides, year, month\n",
+      "Sample Document:\n",
+      "{'_id': '20221', 'total_rides': 103770, 'year': 2022, 'month': 1}\n",
+      "\n",
+      "\n",
+      "Collection Name: divvy_rides_by_season\n",
+      "Document Count: 4\n",
+      "Field Names: _id, total_rides\n",
+      "Sample Document:\n",
+      "{'_id': {'year': 2022, 'season': 'Autumn'}, 'total_rides': 1597759}\n",
+      "\n",
+      "\n",
       "Collection Name: station_names\n",
       "Document Count: 1674\n",
       "Field Names: _id, lat, lng, ride_count, station_name, city, neighborhood, ward, community_area\n",
       "Sample Document:\n",
       "{'_id': 'Clark St & Armitage Ave', 'lat': 41.918306, 'lng': -87.636282, 'ride_count': 29051, 'station_name': 'Clark St & Armitage Ave', 'city': 'CHICAGO', 'neighborhood': 'Old Town', 'ward': '43', 'community_area': 'LINCOLN PARK'}\n",
+      "\n",
+      "\n",
+      "Collection Name: divvy_rides_and_weather\n",
+      "Document Count: 365\n",
+      "Field Names: _id, total_rides, date, cloud_cover, precipitation, min_temp, max_temp, morning_temp, afternoon_temp, evening_temp, night_temp, max_windspeed, significant_precipitation\n",
+      "Sample Document:\n",
+      "{'_id': '2022-01-01', 'total_rides': 2563, 'date': '2022-01-01', 'cloud_cover': 90.0, 'precipitation': 0.0070866179999999, 'min_temp': 33.22, 'max_temp': 42.1, 'morning_temp': 42.1, 'afternoon_temp': 38.43, 'evening_temp': 35.24, 'night_temp': 38.44, 'max_windspeed': 15.01, 'significant_precipitation': 'False'}\n",
       "\n",
       "\n"
      ]
