create weather charts

--- a/database_components/queries.ipynb
+++ b/database_components/queries.ipynb
@@ -263,6 +263,95 @@
     "\n",
     "print(\"Merged data has been created in the 'divvy_rides_and_weather' collection.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average ride count by month has been created in the 'avg_rides_by_month' collection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "divvy_rides_and_weather = divvy_db[\"divvy_rides_and_weather\"]\n",
+    "\n",
+    "# Define the aggregation pipeline\n",
+    "pipeline = [\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"_id\": 0,  # Exclude the _id field\n",
+    "            \"date\": {\"$dateFromString\": {\"dateString\": \"$date\"}},\n",
+    "            \"total_rides\": 1,\n",
+    "            \"significant_precipitation\": \"$significant_precipitation\"\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$addFields\": {\n",
+    "            \"month\": {\"$month\": \"$date\"},\n",
+    "            \"year\": {\"$year\": \"$date\"}\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": {\n",
+    "                \"year\": \"$year\",\n",
+    "                \"month\": \"$month\",\n",
+    "                \"significant_precipitation\": \"$significant_precipitation\"\n",
+    "            },\n",
+    "            \"avg_rides\": {\"$avg\": \"$total_rides\"}\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$sort\": {\"_id.year\": 1, \"_id.month\": 1}\n",
+    "    },\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": {\n",
+    "                \"year\": \"$_id.year\",\n",
+    "                \"month\": \"$_id.month\"\n",
+    "            },\n",
+    "            \"data\": {\n",
+    "                \"$push\": {\n",
+    "                    \"significant_precipitation\": \"$_id.significant_precipitation\",\n",
+    "                    \"avg_rides\": \"$avg_rides\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"_id\": 0,  # Exclude the _id field\n",
+    "            \"year\": \"$_id.year\",\n",
+    "            \"month\": \"$_id.month\",\n",
+    "            \"data\": 1\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$sort\": {\"year\": 1, \"month\": 1}\n",
+    "    },\n",
+    "    {\n",
+    "        \"$addFields\": {\n",
+    "            \"_id\": {\"$concat\": [{\"$toString\": \"$year\"}, \"_\", {\"$toString\": \"$month\"}]}\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$merge\": {\n",
+    "            \"into\": \"avg_rides_by_month\",\n",
+    "            \"whenMatched\": \"replace\"  # Replace existing documents\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Execute the aggregation pipeline\n",
+    "divvy_db.divvy_rides_and_weather.aggregate(pipeline)\n",
+    "\n",
+    "print(\"Average ride count by month has been created in the 'avg_rides_by_month' collection.\")\n"
+   ]
   }
  ],
  "metadata": {
