--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,13 @@
       "Field Names: _id, total_rides, date, cloud_cover, precipitation, min_temp, max_temp, morning_temp, afternoon_temp, evening_temp, night_temp, max_windspeed, significant_precipitation\n",
       "Sample Document:\n",
       "{'_id': '2022-01-01', 'total_rides': 2563, 'date': '2022-01-01', 'cloud_cover': 90.0, 'precipitation': 0.0070866179999999, 'min_temp': 33.22, 'max_temp': 42.1, 'morning_temp': 42.1, 'afternoon_temp': 38.43, 'evening_temp': 35.24, 'night_temp': 38.44, 'max_windspeed': 15.01, 'significant_precipitation': 'False'}\n",
+      "\n",
+      "\n",
+      "Collection Name: avg_rides_by_month\n",
+      "Document Count: 12\n",
+      "Field Names: _id, data, year, month\n",
+      "Sample Document:\n",
+      "{'_id': '2022_1', 'data': [{'significant_precipitation': 'True', 'avg_rides': 1861.6}, {'significant_precipitation': 'False', 'avg_rides': 3633.153846153846}], 'year': 2022, 'month': 1}\n",
       "\n",
       "\n",
       "Collection Name: divvy_rides_by_day\n",
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
