--- a/database_components/mongoDB_local-to-public_conversion.ipynb
+++ b/database_components/mongoDB_local-to-public_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +114,31 @@
     "remote_client = MongoClient(connection_string)\n",
     "remote_db = remote_client['divvy_db_public']\n",
     "remote_collection_name = 'divvy_rides_and_weather'\n",
+    "remote_collection = remote_db[remote_collection_name]\n",
+    "\n",
+    "# Drop the remote collection to start fresh\n",
+    "remote_collection.drop()\n",
+    "\n",
+    "# Iterate through documents in the local collection and insert into remote collection\n",
+    "for document in local_collection.find():\n",
+    "    remote_collection.insert_one(document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Local MongoDB instance\n",
+    "local_db = mongo['divvy_db']\n",
+    "local_collection_name = 'avg_rides_by_month'\n",
+    "local_collection = local_db[local_collection_name]\n",
+    "\n",
+    "# Remote MongoDB instance (Atlas)\n",
+    "remote_client = MongoClient(connection_string)\n",
+    "remote_db = remote_client['divvy_db_public']\n",
+    "remote_collection_name = 'avg_rides_by_month'\n",
     "remote_collection = remote_db[remote_collection_name]\n",
     "\n",
     "# Drop the remote collection to start fresh\n",
