update style sheet

--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +163,13 @@
       "Field Names: _id, total_rides, year, month\n",
       "Sample Document:\n",
       "{'_id': '20221', 'total_rides': 103770, 'year': 2022, 'month': 1}\n",
+      "\n",
+      "\n",
+      "Collection Name: avg_rides_by_month\n",
+      "Document Count: 12\n",
+      "Field Names: _id, data, year, month\n",
+      "Sample Document:\n",
+      "{'_id': '2022_1', 'data': [{'significant_precipitation': 'True', 'avg_rides': 1861.6}, {'significant_precipitation': 'False', 'avg_rides': 3633.153846153846}], 'year': 2022, 'month': 1}\n",
       "\n",
       "\n",
       "Collection Name: divvy_rides_by_season\n",
