--- a/database_components/weather_raw_data.ipynb
+++ b/database_components/weather_raw_data.ipynb
@@ -186,6 +186,8 @@
     "weather_df[\"precipitation\"] = weather_df[\"precipitation\"] * mm_to_in\n",
     "\n",
     "# Define the threshold value for significant precipitation comparison \n",
+    "# Source: WeatherShack Rain Measurement\n",
+    "# https://www.weathershack.com/static/ed-rain-measurement.html\n",
     "threshold = 0.1\n",
     "\n",
     "# Create the new boolean precipitation column\n",
